refactor: サイトタイトルをWikiからまとめサイトに変更
- hugo.yamlのtitleを完全に日本語化
- content/_index.mdの見出しとセクション名を更新
  - 「流星のロックマン パーフェクトコレクション Wiki」
    → 「流星のロックマン パーフェクトコレクションまとめサイト」
  - 「このWikiについて」→「このサイトについて」

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,6 +1,6 @@
 baseURL: 'https://chipcom.org/ryusei-perfect-collection/'
 languageCode: 'ja-jp'
-title: 'Ryusei Perfect Collection Wiki'
+title: '流星のロックマン パーフェクトコレクションまとめサイト'
 theme: 'hugo-book'
 
 pagination:
